syntax = "proto3";

option go_package = "github.com/hyperledger-labs/cckit/extensions/envelope";
package envelope;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Envelope {
  string public_key = 1; // signer public key in base58 
  string signature = 2; // payload signature in base58 
  string nonce = 3; // number is given for replay protection
  string hash_to_sign = 4; // payload hash in base58 
  string hash_func = 5; // function used for hashing
  google.protobuf.Timestamp deadline = 6; // signature is not valid after deadline (EIP-2612)
  // channel + chaincode + method are used as domain separator to prevent replay attack from other domains (EIP-2612)
  string channel = 7;
  string chaincode = 8;
  string method = 9;
  string signature_alg = 10;
}